--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,7 @@ jobs:
           script: |
             REPO_DIR="${{ secrets.SERVER_REPO_LOCATION }}"
             REPO_NAME="${{ github.event.repository.name }}"
+            REPO_BRANCH="${{ secrets.REPO_BRANCH }}"
             REPO_URL="https://${{ secrets.SERVER_HOST_GITHUB_PAT }}@github.com/bkan0n/${{ github.event.repository.name }}.git"
 
             # Ensure base directory exists
@@ -26,11 +27,11 @@ jobs:
             # Check if the repository exists
             if [ ! -d "$REPO_NAME/.git" ]; then
               echo "Repository not found. Cloning..."
-              git clone "$REPO_URL" "$REPO_NAME"
+              git clone -b "$REPO_BRANCH" --single-branch "$REPO_URL" "$REPO_NAME"
             else
               echo "Repository exists. Pulling latest changes..."
               cd "$REPO_NAME"
-              git pull origin main
+              git pull origin "$REPO_BRANCH"
             fi
 
             # Restart Docker services
