--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,7 @@ on:
 
 jobs:
   deploy:
+    environment: ${{ inputs.environment || 'default-environment' }}
     runs-on: ubuntu-latest
     steps:
       - name: Update Assets Volume via Git Pull
