--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,11 @@ jobs:
     environment: ${{ inputs.environment || 'default-environment' }}
     runs-on: ubuntu-latest
     steps:
+          # Checkout branch.
+      - uses: actions/checkout@v3
+        with:
+          ref: ${{ secrets.REPO_BRANCH }}
+          
       - name: Update Assets Volume via Git Pull
         uses: appleboy/ssh-action@master
         with:
