--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,4 +46,10 @@ jobs:
 
             # Restart Docker services
             docker compose down >/dev/null
-            doppler run -t ${{ secrets.DOPPLER_SERVICE_TOKEN }} --command "docker compose up -d"
+            if [ -n "${{ inputs.environment }}" ]; then
+              echo "Using environment: ${{ inputs.environment }}"
+              doppler run -t ${{ secrets.DOPPLER_SERVICE_TOKEN }} --command "docker compose up -d" --config ${{ inputs.environment }}
+            else
+              echo "No environment specified. Deploying without environment."
+              doppler run -t ${{ secrets.DOPPLER_SERVICE_TOKEN }} --command "docker compose up -d"
+            fi
