--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,5 +47,5 @@ jobs:
 
             # Restart Docker services
             docker compose down >/dev/null
-            doppler run -t ${{ secrets.DOPPLER_SERVICE_TOKEN }} --command "docker compose up -f ${{ inputs.docker_compose_file | default('docker-compose.yml') }} -d"
+            doppler run -t ${{ secrets.DOPPLER_SERVICE_TOKEN }} --command "docker compose up -f ${{ inputs.docker_compose_file || 'docker-compose.yml' }} -d"
 
