--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,28 @@ on:
         description: "Name of docker compose file"
         required: false
         type: string
+    secrets:
+      SERVER_HOST_IP:
+        description: .
+        required: true
+      SERVER_HOST_USER:
+        description: .
+        required: true
+      SERVER_HOST_SSH_PRIVATE_KEY:
+        description: .
+        required: true
+      SERVER_REPO_LOCATION: 
+        description: .
+        required: true
+      REPO_BRANCH:
+        description: .
+        required: true
+      SERVER_HOST_GITHUB_PAT: 
+        description: .
+        required: true
+      DOPPLER_SERVICE_TOKEN:
+        description: .
+        required: true
         
 jobs:
   deploy:
