--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,6 +61,6 @@ jobs:
             fi
 
             # Restart Docker services
-            sudo docker compose down >/dev/null
-            sudo doppler run -t ${{ secrets.DOPPLER_SERVICE_TOKEN }} --command "sudo docker compose -f ${{ inputs.docker_compose_file || 'docker-compose.yml' }} up -d --build --force-recreate --no-deps"
+            sudo -n docker compose down >/dev/null
+            sudo -n doppler run -t ${{ secrets.DOPPLER_SERVICE_TOKEN }} --command "sudo -n docker compose -f ${{ inputs.docker_compose_file || 'docker-compose.yml' }} up -d --build --force-recreate --no-deps"
 
