--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
     environment: ${{ inputs.environment || 'production' }}
     runs-on: ubuntu-latest
     steps:       
-      - name: Update Assets Volume via Git Pull
+      - name: Pull or Clone Repo and Start Docker Services via Compose
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.SERVER_HOST_IP }}
